Fixed Overflow of Search Controls

--- a/database/styles.css
+++ b/database/styles.css
@@ -12,6 +12,16 @@ main {
   background: var(--content-background-color);
   border-radius: 10pt;
   position: relative;
+  overflow: scroll;
+}
+
+.searchControls::-webkit-scrollbar {
+  display: none;
+}
+
+.searchControls {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .controls,
@@ -23,7 +33,7 @@ main {
   position: absolute;
   top: 50%;
   left: 7pt;
-  right: 7pt;
+  margin-right: 7pt;
   transform: translateY(-50%);
   transition: opacity 0.2s ease;
 }
@@ -33,6 +43,7 @@ main {
   display: flex !important;
   opacity: 0;
   pointer-events: none;
+  right: 0;
 }
 
 .searchField {
@@ -46,7 +57,7 @@ main {
   color: var(--primary-text-color);
   margin: 0;
   padding: 5pt;
-  width: 100%;
+  width: 125pt;
   font: inherit;
   font-size: 10pt;
   border-radius: 5pt;
